# lang-smj

./: .gitignore  CITATION.cff  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  _config.yml  abbreviations-affixes-fst-src.md  acronyms-affixes.md  adjectives-affixes-fst-src.md  adjectives-stems-fst-src.md  adverbs-stems-fst-src.md  autogen.sh  clock-from-old-infra.md  configure.ac  disambiguator-cg3-src.md  docu-smj-bugs.md  docu-smj-bugs.xml  docu-smj-grammartags.xml  docu-smj-lex.md  docu-smj-lex.xml  docu-smj-preprocessor.xml  docu-smj-syn.xml  docu-smj-syntaxtags.md  docu-smj-syntaxtags.xml  docu-smj-twol.md  docu-smj-twol.xml  fil-med-alle-ordformer-barrat.txt  fil-med-alle-ordformer-miehttse.txt  fil-med-alle-ordformer-nuorra.txt  giella-smj.pc.in  grammarchecker-grammarcheckers-tools.md  grc-disambiguator-grammarcheckers-tools.md  index-header.md  index.md  j-smj.xml  language-map.md  lex-oahpasmuvvat-oahpastuvvat.28.02.22  (+94 more)
src/: Makefile  Makefile.am  abbr-smj-lex.txt  acro-smj-lex .txt  acro-smj-lex.txt  adj-smj-lex.txt  adv-smj-lex.txt  case.regex  clock-smj.lexc  closed-smj-lex.txt  conjunction-smj-lex.txt  derivation-filter.regex  focus-filter.regex  hyph-smj.txt  inc-adj.txt  inc-adv.txt  inc-noun.txt  inc-primary.txt  inc-secondary.txt  interjection-smj-lex.txt  missing_free_20110505.txt  noun-smj-lex.txt  numeral-smj-lex.txt  particle-smj-lex.txt  phon-smj.xfst  pp-smj-lex.txt  pronoun-smj-lex.txt  propernoun-smj-lex.txt  propernoun-smj-morph.txt  punct-smj-lex.txt  sme2sm-lexeme.xfst  sme2smj-lexeme.xfst  smi-syn.rle  smj-3dis.rle  smj-dis.rle  smj-dis.rle_cg2  smj-lex.txt  smj-num.txt  smj-onlydis.rle  smj-tdis.rle  (+5 more)
src/cg3/: Makefile.am  disambiguator.cg3  smj-textdisambiguation.cg3  valency.cg3
src/filters/: Makefile.am  backtrack-on-hyphens.regex  block-illegal_compound-strings.regex  change-optionally-word_boundary_to_hyphen.regex  convert-æae-to-area-variant.regex  convert-æae-to-both.regex  insert-area-tags.regex  insert-default-compounding-tags.regex  insert-default_left_compounding-tags.regex  make-optional-lang_hom-tags.regex  remove-DNorm-tags.regex  remove-Dial_-SW-strings.regex  remove-all_areas_but_NO-strings.regex  remove-all_areas_but_SE-strings.regex  remove-illegal-derivation-strings-flagbased.regex  remove-illegal-derivation-strings.regex  remove-norm-comp-tags.regex  remove-rel_focus-strings.regex  reorder-tags.smj.regex
src/fst/: Makefile.am  clitics.lexc  compounding.lexc  phonology.twolc  prefixes.lexc  root.lexc  tags.yaml
src/fst/affixes/: abbreviations.lexc  acronyms.lexc  adjectives.lexc  nouns.lexc  numerals.lexc  possessives.lexc  pronouns.lexc  propernouns.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  block-illegal_compound-strings.regex  change-optionally-word_boundary_to_hyphen.regex  convert-æae-to-area-variant.regex  convert-æae-to-both.regex  insert-area-tags.regex  insert-default-compounding-tags.regex  insert-æae-area-flags.regex  make-optional-lang_hom-tags.regex  remove-Dial_-NOR-strings.regex  remove-illegal-derivation-strings-flagbased.regex  remove-illegal-derivation-strings.regex  remove-rel_focus-strings.regex  remove-æae-flags-after-æae.regex  rename-POS_before_Der-tags.regex  split-CmpN-tags.regex
src/fst/incoming/: cmpR_franounstems.txt  list_with_Cmp_Def2.txt  missing.nonob.freqsort.txt  missing.txt  missing2018-08-16.txt  missingSIKOR060121.txt  missingSIKORapril21.txt
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  clitics.lexc  compounding.lexc  phonology.twolc  root.lexc
src/fst/orthography/: Makefile.am  spellrelax-with-flagtags.regex  spellrelax.regex
src/fst/phonetics/: Makefile.am  txt2ipa.xfscript
src/fst/scripts/: smi-smj-conversion.pl
src/fst/stems/: adjectives.lexc  adpositions.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  (+9 more)
src/hyphenation/: hyphenation.xfscript
src/inc/: inc-adj.txt  inc-noun.txt  inc-primary.txt  inc-secondary.txt  missing-anta-pirak.txt  missing-nosa2021.txt  missing-sano2021.txt  missing_bound_20110505.txt  missing_from_AK.txt  missing_from_AK_norsk_lulesamisk.txt  missing_men_i_typos.txt  missing_termwiki_2020.03.19.txt  smj-missing-corpus-ny.2020.03.18.txt  smj-missing-corpus-ny1500revsort-utentypos.2020.03.18.txt  smj-missing-corpus-ny1500revsort.2020.03.18.txt  smj-missing-corpus-utn-norsk-lang-a.2020.04.27.txt  smj-missing-corpus-utn-norsk.2020.03.18.txt  smj-missing-corpus-utn-norsk.2020.04.23.txt  smj-missing-corpus-utn-norsk_fem_og_mer.2020.03.18.revsort.txt  smj-missing-corpus-utn-norsk_fem_og_mer.2020.03.18.txt  smj-missing-corpus.2020.03.13.txt  typos3.txt  vige-MEDBAHKO-nob-smj.txt  vige-MEDBAHKO-smj-nob.txt  visot_Kintel_smjnob_rev.txt
src/morphology/: Makefile.am  clitics.lexc  compounding.lexc  prefixes.lexc  root.lexc  tags.yaml
src/orthography/: Makefile.am  downcase-derived_proper-strings.xeroxscript  downcase-derived_proper-strings.xfscript  downcase-derived_proper-strings.xfscript.in  inituppercase.regex  spellrelax.regex
src/phonetics/: Makefile.am  acro2ipa.xfscript  smj2ipa.xfscript  smj2sampa-from-old-infra.xfscript  txt2ipa.xfscript
src/phonology/: smj-phon.twolc
src/scripts/: sma-smj-conversion.py  sme-smj-conversion.bash  sme-smj-conversion.py  smi-smj-conversion.pl
src/syntax/: SMEdisambiguation.cg3  abbr.txt  disambiguation.cg3  disambiguator.cg3  smi-syn.cg3  smj-onlydis.rle  smj-tdis.cg3  smj-textdisambiguation.cg3
src/transcriptions/: Makefile.am  clock.lexc  numbers.lexc  smj-num.txt  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-arabic2roman.regex  transcriptor-numbers-digit2text.lexc
tools/tokenisers/: Makefile.am  abbr.txt  corpustags.txt  mwe-dis.cg3  tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript  tokeniser-tts-cggt-desc.pmscript
tools/tts/: .gitignore  Makefile.am  acro2text.regex  convert-helper.awk  convert-to-SE.sh.in  pipeline.ts  pipespec.xml.in  remove-lexicalised-compounds.cg3  schemas.xml  text2phontext.regex  valency.cg3
(+1085 files in other folders)
